# AB_Platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.ai.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  requirements.txt
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py  worker.py
backend/app/models/: db.py
backend/app/routers/: assignments.py  audit.py  auth.py  custom_metrics.py  decisions.py  events.py  experiments.py  flags.py  guardrails.py  health.py  holdouts.py  results.py  roles.py  segments.py  sse.py  stats.py  webhooks.py
backend/app/schemas/: __init__.py  assignment.py  (+13 more)
backend/migration/: env.py
backend/tests/: conftest.py  test_audit.py  test_export.py  test_flags.py  test_holdouts.py  test_integration.py  test_m011_custom_metrics_guardrails.py  test_m012_decisions.py  test_m013_webhooks.py  test_rbac.py  test_segments.py  test_sse.py  test_stats.py
docker/: Dockerfile.ollama  ollama-entrypoint.sh
docs/adr/: ADR-001-frontend-ui-library.md  ADR-002-state-management.md  ADR-003-realtime-transport.md  ADR-004-feature-flags.md  ADR-005-sequential-testing.md  ADR-006-rbac-model.md
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
sdk/js/: README.md  package-lock.json  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/abplatform/: __init__.py  cache.py  client.py
sdk/python/tests/: test_client.py
(+160 files in other folders)
