[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abplatform"
version = "0.1.0"
description = "Python SDK for AB Platform — open source A/B testing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[tool.pytest.ini_options]
pythonpath = ["."]
